[package]
name = "remote_hash_map"
version = "0.0.2"
edition = "2021"
authors = ["Kamil Wdowicz <kwdowicz@gmail.com>"]
description = "Remote hash map"
repository = "https://github.com/kwdowicz/remote_hash_map"
license = "MIT OR Apache-2.0"

[dependencies]
prost = "0.12.6"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
structopt = "0.3.26"
http = "0.2.12"
thiserror = "1.0.61"
log = "0.4.21"
env_logger = "0.11.3"

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "ng"
path = "src/node_group.rs"

[[bin]]
name = "node"
path = "src/node.rs"
